Secons text Some tests with css Thinking about idea of site

--- a/hello_world.html
+++ b/hello_world.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel ="stylesheet" href="home.css">
     <meta charset="utf-8">
-    <title>HELLO WORLD!!!</title>
-  </head>
-  <body>
-    <h1>First site</h1>
-    <h2>Description:</h2>
-    <div class ="Block1" style = "color:blue">
-      <a>There are many text about my site and <br> bla bla bla..</a>
-      <a>
-        <ul>
-          <li>Do some different text</li>
-          <li style="color:green">Do some different colors of text</li>
-          <li>Do some image<img src="image1.png" alt="There was image" width="30" height="30"></li>
-        </ul>
+    <div class="toper">
+          <title>SharpACodeBox</title>
     </div>
-    <div class ="Block2">
-      <img src="image1.png" alt="There was image">
+    <link rel="shortcut icon" href="icon.png">
+  </head>
+  <body bgcolor="#3B3A3D">
+    <h1 id="main_heading"> #ACODEBOX </h1>
+    <div class="background-footer">
+      <div id="footer">
+          &copy; GUSAROV2906
+      </div>
     </div>
   </body>
 </html>
