--- a/hello_world.html
+++ b/hello_world.html
@@ -3,16 +3,53 @@
   <head>
     <link rel ="stylesheet" href="home.css">
     <meta charset="utf-8">
-    <div class="toper">
-          <title>SharpACodeBox</title>
-    </div>
+    <title>SharpACodeBox</title>
     <link rel="shortcut icon" href="icon.png">
   </head>
-  <body bgcolor="#3B3A3D">
-    <h1 id="main_heading"> #ACODEBOX </h1>
-    <div class="background-footer">
-      <div id="footer">
-          &copy; GUSAROV2906
+<body bgcolor >
+    <div class="wrapper">
+      <div class="header">
+        <div class="inner-header">
+         #ACODEBOX
+        </div>
+      </div>
+      <div class="row">
+        <div class="content">
+          <div class="inner-content">
+            <h2>Lorem Ipsum<h2/>
+              <h3>Что такое Lorem Ipsum?</h3>
+              <a> Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum. </a>
+              <h3>Откуда он появился?</h3>
+              <a>Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый первоисточник Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра и зла"), написанной Цицероном в 45 году н.э. Этот трактат по теории этики был очень популярен в эпоху Возрождения. Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в разделе 1.10.32
+
+              Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33 "de Finibus Bonorum et Malorum" Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.</a>
+              <h3>Почему он используется?</h3>
+              <a>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).</a>
+              <h3>Где его взять?</h3>
+              <a>Есть много вариантов Lorem Ipsum, но большинство из них имеет не всегда приемлемые модификации, например, юмористические вставки или слова, которые даже отдалённо не напоминают латынь. Если вам нужен Lorem Ipsum для серьёзного проекта, вы наверняка не хотите какой-нибудь шутки, скрытой в середине абзаца. Также все другие известные генераторы Lorem Ipsum используют один и тот же текст, который они просто повторяют, пока не достигнут нужный объём. Это делает предлагаемый здесь генератор единственным настоящим Lorem Ipsum генератором. Он использует словарь из более чем 200 латинских слов, а также набор моделей предложений. В результате сгенерированный Lorem Ipsum выглядит правдоподобно, не имеет повторяющихся абзацей или "невозможных" слов.</a>
+              <a href = "https://ru.lipsum.com/"> Взято с https://ru.lipsum.com/ </a>
+          </div>
+        </div>
+        <div class="sidebar">
+          <div class="inner-sidebar">
+            MENU:
+            <ul class="inner-sidebar-list">
+              <li> INFO </li>
+              <li> MY PROJECTS
+              <ul id="inner-sidebar-list_in_list_1" type="disc">
+                <li> HTML/CSS PROJECTS </li>
+                  <ul id="inner-sidebar-list_in_list_2" type="disc"> <li> ACODEBOX site </li> </ul>
+              </ul>
+             </li>
+              <li> CONTACTS </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="inner-footer">
+            &copy; GUSAROV2906
+        </div>
       </div>
     </div>
   </body>
