Added site transmitions, new pages also new style wuth new fonts

--- a/hello_world.html
+++ b/hello_world.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
       <div class="header">
         <div class="inner-header">
-         #ACODEBOX
+         <a class="header_link" href="hello_world.html"> #ACODEBOX </a>
         </div>
       </div>
       <div class="row">
@@ -28,21 +28,18 @@
               <h3>Где его взять?</h3>
               <a>Есть много вариантов Lorem Ipsum, но большинство из них имеет не всегда приемлемые модификации, например, юмористические вставки или слова, которые даже отдалённо не напоминают латынь. Если вам нужен Lorem Ipsum для серьёзного проекта, вы наверняка не хотите какой-нибудь шутки, скрытой в середине абзаца. Также все другие известные генераторы Lorem Ipsum используют один и тот же текст, который они просто повторяют, пока не достигнут нужный объём. Это делает предлагаемый здесь генератор единственным настоящим Lorem Ipsum генератором. Он использует словарь из более чем 200 латинских слов, а также набор моделей предложений. В результате сгенерированный Lorem Ipsum выглядит правдоподобно, не имеет повторяющихся абзацей или "невозможных" слов.</a>
               <a href = "https://ru.lipsum.com/"> Взято с https://ru.lipsum.com/ </a>
+              <br>
+              <br>
           </div>
         </div>
         <div class="sidebar">
           <div class="inner-sidebar">
             MENU:
             <ul class="inner-sidebar-list">
-              <li> INFO </li>
-              <li> MY PROJECTS
-              <ul id="inner-sidebar-list_in_list_1" type="disc">
-                <li> HTML/CSS PROJECTS </li>
-                  <ul id="inner-sidebar-list_in_list_2" type="disc"> <li> ACODEBOX site </li> </ul>
+              <li><a class="sidebar_link" href="hello_world.html"> INFO</a></li>
+              <li><a class="sidebar_link" href="myprojects.html"> MY PROJECTS</a></li>
+              <li><a class="sidebar_link" href="contacts.html"> CONTACTS</a></li>
               </ul>
-             </li>
-              <li> CONTACTS </li>
-            </ul>
           </div>
         </div>
       </div>
